# corvus

./: .gitignore  Cargo.toml  FORK.md  README.md  build.ps1  build.sh  index.html  styles.css
.github/workflows/: release.yml
src/: app.rs  context.rs  main.rs  models.rs  tauri_bridge.rs
src-tauri/: Cargo.toml  launcher.toml.example  tauri.conf.json
src-tauri/src/: build_config.rs  config.rs  discord.rs  history.rs  instances.rs  java.rs  lib.rs  main.rs  models.rs  news.rs  state.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  offline.rs
src-tauri/src/game/: loader.rs  mod.rs  mods.rs  process.rs  vanilla.rs
src/components/: mod.rs  sidebar.rs  topbar.rs
src/pages/: home.rs  instance_settings.rs  login.rs  mod.rs  profile.rs  settings.rs
