[package]
name = "corvus"
version = "0.1.0"
description = "A customizable open-source Minecraft launcher"
authors = ["Huskago"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "corvus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "process", "rt", "io-util", "time"] }
dirs = "6"
reqwest = { version = "0.13", features = ["json", "rustls", "form"], default-features = false }
zip = "8"
flate2 = "1"
tar = "0.4"
sha1 = "0.11"
md5 = "0.8"
url = "2"
toml = "0.8"

tauri-plugin-autostart = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
